# formation-mlops

./: .gitignore  .nojekyll  Dockerfile  MLproject  README.md  _quarto.yml  conda.yaml  conda.yml  import_corpus.sh  index.html  init.sh  pyproject.toml  render.sh  requirements.txt  robots.txt  search.json  setup.sh  sitemap.xml
.github/workflows/: build_image.yml  docker.yml  get-secrets.yml  publish-slides.yaml  publish.yaml
app/: main.py  utils.py
argo_workflow/: workflow.yml
argo_workflows/: workflow.yml
argocd/: formation-mlops-api.yml  template-argocd.yml
dashboard/: index.qmd
kubernetes/: deployment.yml  ingress.yml  service.yml
notebooks/: mlflow-custom-model.ipynb  mlflow-introduction.ipynb
slides/: .gitignore  custom.css  index.html  index.ipynb  index.qmd  render.sh
slides/applications/: _application0.qmd  _application1.qmd  _application2.qmd  _application3.qmd  _application4.qmd  _application5.qmd
slides/en/: index.html  index.qmd
slides/en/applications/: _application0.qmd  _application1.qmd  _application2.qmd  _application3.qmd  _application4.qmd  _application4a.qmd  _application4b.qmd  _application5.qmd
slides/en/sections/: 0-introduction.qmd  1-mlflow-intro.qmd  2-mlflow-custom-class-example.qmd  3-deployment.qmd  (+4 more)
slides/fr/: index.html  index.qmd
slides/sections/: 0-introduction.qmd  1-mlflow-example.qmd  2-mlflow-custom-class-example.qmd  3-deployment.qmd  3-parallel-training.qmd  4-parallel-training.qmd  5-ml-in-production.qmd
src/: __init__.py  constants.py  fasttext_wrapper.py  preprocessor.py  train.py  utils.py
(+24 files in other folders)
