[project]
name = "formation-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.46",
    "duckdb>=1.4.1",
    "fastapi>=0.118.0",
    "fasttext>=0.9.3",
    "ipykernel>=6.30.1",
    "mlflow>=3.4.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.10",
    "s3fs>=0.4.2",
    "scikit-learn>=1.7.2",
    "unidecode>=1.4.0",
    "uvicorn>=0.37.0",
]
